2005-12-16  A Balamurugan  <bala@zresearch.com>

	* fish/src/fish-argp.c (fi_set_arguments): new function.

	* fish/src/ipmi-wrapper.c (get_ipmi_host_ip_address): Improved.

	* fish/src/scm-procedures.c (ex_ipmi_open): Improved.

2005-12-16  A Balamurugan  <bala@zresearch.com>

	* libfreeipmi/src/ipmi-lan-interface.c (ipmi_lan_cmd2): added
	debugging code when invalid packet data is received.

2005-12-16  Anand Babu  <ab@zresearch.com>

	* lot of .c,.h files: Applying Anand Avati's <avati@zresearch.com>
	patch for ISO C99: 7.18 Integer types <stdint.h> compliance. This
	also closes Bastian Blank <waldi@debian.org>'s bug #11210
	overview: Uses nonstandard datatypes.

2005-12-14  A Balamurugan  <bala@zresearch.com>

	* fish/extensions/bc-common.scm: Fixed command line argument
	parsing bug.

	* fish/extensions/bmc-info.scm: like wise.

	* fish/extensions/pef.scm: like wise.

	* fish/extensions/sel.scm: like wise.

	* fish/extensions/sensors-common.scm: like wise.

	* libfreeipmi/src/ipmi-sensor-event-messages.c
	(get_01_generic_event_message, get_02_generic_event_message,
	get_03_generic_event_message, get_04_generic_event_message,
	get_05_generic_event_message, get_06_generic_event_message,
	get_07_generic_event_message, get_08_generic_event_message,
	get_09_generic_event_message, get_0A_generic_event_message,
	get_0B_generic_event_message, get_0C_generic_event_message,
	get_01_event_message, get_02_event_message, get_03_event_message,
	get_04_event_message, get_05_event_message, get_06_event_message,
	get_07_event_message, get_08_event_message, get_09_event_message,
	get_0C_event_message, get_0F_event_message, get_10_event_message,
	get_11_event_message, get_12_event_message, get_13_event_message,
	get_14_event_message, get_19_event_message, get_1D_event_message,
	get_1E_event_message, get_1F_event_message, get_20_event_message,
	get_21_event_message, get_22_event_message, get_23_event_message,
	get_24_event_message, get_25_event_message, get_27_event_message,