@@ -269,6 +269,46 @@ ipmi_open_inband (ipmi_device_t *dev,
     {
     case IPMI_DEVICE_KCS:
       ERR (ipmi_locate (IPMI_INTERFACE_KCS, &(dev->io.inband.locate_info)) != NULL);
+      dev->type = driver_type;
+      dev->mode = mode;
+      dev->io.inband.poll_interval_usecs = IPMI_POLL_INTERVAL_USECS;
+      
+      /* At this point we only support SYSTEM_IO, i.e. inb/outb style IO. 
+	 If we cant find the bass address, we better exit. -- Anand Babu */
+      if (dev->io.inband.locate_info.addr_space_id != IPMI_ADDRESS_SPACE_ID_SYSTEM_IO)
+	{
+	  memset (dev, 0, sizeof (ipmi_device_t));
+	  errno = ENODEV;
+	  return (-1);
+	}
+      
+#ifdef __FreeBSD__
+#ifdef USE_IOPERM
+      /* i386_set_ioperm has known problems on FBSD 5.x (bus errors). */
+      if (i386_set_ioperm (dev->io.inband.locate_info.base_addr.bmc_iobase_addr, 
+			   0x02, 0x01) != 0)
+	{
+	  memset (dev, 0, sizeof (ipmi_device_t));
+	  return (-1);
+	}
+#else
+      /* Opening /dev/io raises IOPL bits for current process. */
+      /* XXX This fd will remain open until exit as there is no
+       * uninitialization routine. */
+      dev->io.inband.dev_fd = open ("/dev/io", O_RDONLY);
+      if (dev->io.inband.dev_fd < 0)
+	{
+	  memset (dev, 0, sizeof (ipmi_device_t));
+	  return (-1);
+	}
+#endif
+#else
+      if (iopl (3) < 0)
+	{
+	  memset (dev, 0, sizeof (ipmi_device_t));
+	  return (-1);
+	}
+#endif
       break;
     case IPMI_DEVICE_SMIC:
       ERR (ipmi_locate (IPMI_INTERFACE_SMIC, &(dev->io.inband.locate_info)) != NULL);
@@ -278,52 +318,19 @@ ipmi_open_inband (ipmi_device_t *dev,
       return (-1);
     case IPMI_DEVICE_SSIF:
       ERR (ipmi_locate (IPMI_INTERFACE_SSIF, &(dev->io.inband.locate_info)) != NULL);
+      dev->io.inband.dev_name = dev->io.inband.locate_info.bmc_i2c_dev_name;
+      /* dev->io.inband.ipmb_addr = dev->io.inband.locate_info.base_addr.bmc_smbus_slave_addr; */
+      dev->io.inband.ipmb_addr = 0x341A;
+      dev->type = driver_type;
+      dev->mode = mode;
+      ERR (ipmi_ssif_io_init (dev->io.inband.dev_name, 
+			      dev->io.inband.ipmb_addr, 
+			      &(dev->io.inband.dev_fd)) != 0);
       break;
     default:
       errno = EINVAL;
       return (-1);
     }
-  
-  dev->type = driver_type;
-  dev->mode = mode;
-  dev->io.inband.poll_interval_usecs = IPMI_POLL_INTERVAL_USECS;
-  
-  /* At this point we only support SYSTEM_IO, i.e. inb/outb style IO. 
-     If we cant find the bass address, we better exit. -- Anand Babu */
-  if (dev->io.inband.locate_info.addr_space_id != IPMI_ADDRESS_SPACE_ID_SYSTEM_IO)
-    {
-      memset (dev, 0, sizeof (ipmi_device_t));
-      errno = ENODEV;
-      return (-1);
-    }
-  
-#ifdef __FreeBSD__
-#ifdef USE_IOPERM
-  /* i386_set_ioperm has known problems on FBSD 5.x (bus errors). */
-  if (i386_set_ioperm (dev->private.locate_info.base_addr.bmc_iobase_addr, 
-		       0x02, 0x01) != 0)
-    {
-      memset (dev, 0, sizeof (ipmi_device_t));
-      return (-1);
-    }
-#else
-  /* Opening /dev/io raises IOPL bits for current process. */
-  /* XXX This fd will remain open until exit as there is no
-   * uninitialization routine. */
-  dev->private.dev_fd = open ("/dev/io", O_RDONLY);
-  if (dev->private.dev_fd < 0)
-    {
-      memset (dev, 0, sizeof (ipmi_device_t));
-      return (-1);
-    }
-#endif
-#else
-  if (iopl (3) < 0)
-    {
-      memset (dev, 0, sizeof (ipmi_device_t));
-      return (-1);
-    }
-#endif
   
   /* Prepare in-band headers */
   dev->io.inband.rq.tmpl_hdr_ptr = &tmpl_inband_hdr;
@@ -376,9 +383,14 @@ ipmi_cmd (ipmi_device_t *dev,
 			    tmpl_cmd_rq, 
 			    obj_cmd_rs, 
 			    tmpl_cmd_rs);
+    case IPMI_DEVICE_SSIF:
+      return ipmi_ssif_cmd2 (dev, 
+			     obj_cmd_rq, 
+			     tmpl_cmd_rq, 
+			     obj_cmd_rs, 
+			     tmpl_cmd_rs);
     case IPMI_DEVICE_SMIC:
     case IPMI_DEVICE_BT:
-    case IPMI_DEVICE_SSIF:
     default:
       errno = EINVAL;
       return (-1);
@@ -407,9 +419,10 @@ ipmi_cmd_raw (ipmi_device_t *dev,
 	break;
     case IPMI_DEVICE_KCS:
       return ipmi_kcs_cmd_raw2 (dev, in, in_len, out, out_len);
+    case IPMI_DEVICE_SSIF:
+      return ipmi_ssif_cmd_raw2 (dev, in, in_len, out, out_len);
     case IPMI_DEVICE_SMIC:
     case IPMI_DEVICE_BT:
-    case IPMI_DEVICE_SSIF:
     default:
       errno = EINVAL;
       return (-1);
@@ -438,11 +451,32 @@ ipmi_outofband_close (ipmi_device_t *dev)
 static int 
 ipmi_inband_close (ipmi_device_t *dev)
 {
+  if (dev == NULL)
+    {
+      errno = EINVAL;
+      return (-1);
+    }
+  
+  switch (dev->type)
+    {
+    case IPMI_DEVICE_KCS:
 #ifdef __FreeBSD__
 #ifndef USE_IOPERM
-  close (dev->private.dev_fd);
+      close (dev->io.inband.dev_fd);
 #endif
 #endif
+      break;
+    case IPMI_DEVICE_SMIC:
+      break;
+    case IPMI_DEVICE_BT:
+      break;
+    case IPMI_DEVICE_SSIF:
+      ipmi_ssif_io_exit (dev->io.inband.dev_fd);
+      break;
+    default:
+      errno = EINVAL;
+      return (-1);
+    }
   
   ipmi_inband_free (dev);
   
