@@ -163,5 +163,15 @@ size_t ipmi_ssif_read (int i2c_fd, char *buf, size_t *len);
 *******************************************************************************/
 size_t ipmi_ssif_exit (int i2c_fd);
 
+int ipmi_ssif_cmd2 (ipmi_device_t *dev, 
+		    fiid_obj_t obj_cmd_rq, 
+		    fiid_template_t tmpl_cmd_rq, 
+		    fiid_obj_t obj_cmd_rs, 
+		    fiid_template_t tmpl_cmd_rs);
+int8_t ipmi_ssif_cmd_raw2 (ipmi_device_t *dev, 
+			   uint8_t *buf_rq, 
+			   size_t buf_rq_len, 
+			   uint8_t *buf_rs, 
+			   size_t *buf_rs_len);
 
 #endif /* IPMI_SSIF_INTERFACE_H */
