@@ -1,3 +1,12 @@
+2005-12-17  A Balamurugan  <bala@zresearch.com>
+
+	* libfreeipmi/src/ipmi-interface.c
+	(ipmi_open_inband,ipmi_cmd,ipmi_cmd_raw,ipmi_inband_close): Added
+	SSIF inband support in UDM.
+
+	* libfreeipmi/src/ipmi-ssif-interface.c
+	(ipmi_ssif_cmd2,ipmi_ssif_cmd_raw2): Added functions.
+
 2005-12-16  A Balamurugan  <bala@zresearch.com>
 
 	* fish/src/fish-argp.c (fi_set_arguments): new function.
